--- a/style.css
+++ b/style.css
@@ -1,3 +1,44 @@
 body {
     background-color: hsl(47, 88%, 63%);
 }
+
+.card {
+    width: 400px;
+    height: 500px;
+    background-color: rgb(255, 255, 255);
+    margin: auto;
+    margin: auto;
+    border-radius: 5%;
+    box-shadow: 5px 10px;
+    border-color: black;
+    border-width: 20px;
+    max-width: 500px;
+}
+
+#image {
+    display: block;
+    margin-top: 25px;
+    margin-left: 10px;
+    border-radius: 5%;
+    padding-top: 20px;
+}
+
+.text {
+    text-align: center ;
+}
+
+#learning {
+    background-color: hsl(47, 88%, 63%);
+    text-align: left;
+    width:72px;
+    height: 25px;
+    padding-left: 10px;
+    padding-top: 5px;
+    border-radius: 15%;
+    margin-left: 10px;
+}
+
+#published {
+    text-align: left;
+    margin-right: 10px;
+}
